syntax = "proto3";

package darwin;

option go_package = "github.com/anirul/go_darwin_server/darwin";

// Vector 3 this store position or other 3 float values.
// Next: 4
message Vector3 {
    double x = 1;
    double y = 2;
    double z = 3;
}

// Vector 4 this is representing a quaternion (rotation).
message Vector4 {
    double x = 1;
    double y = 2;
    double z = 3;
    double w = 4;
}

// Physical property of the element.
// Next: 7
message Physic {
    // Sphere radius.
    double radius = 1;
    // weight total.
    double mass = 2;
    // Sphere position.
    Vector3 position = 3;
    // Velocity the speed it has d(position)/dt.
    Vector3 velocity = 5;
    // Sphere look direction.
    Vector4 orientation = 4;
    // Rotation d(orientation)/dt.
    Vector4 rotation = 6;
}

// Sphere element in the world.
// Next: 5
message Element {
    string name = 1;
    // Material string.
    string material = 2;
    // Physic, position, speed etc...
    Physic physic = 3;
    // What type of element is it?
    enum TypeEnum {
        UKNOWN = 0;     // Unknown this is an error!
        GROUND = 1;     // From where the gravity is generated.
        EXPLOSION = 2;  // Explosion that push stuff around.
        UPGRADE = 3;    // Upgrade to upgrade players.
        GREEN = 4;      // Greenery (no effect on anything).
        BROWN = 5;      // Tree bark and non destructible elements.
        WATER = 6;      // Water.
    }
    TypeEnum type_enum = 4;
}

// Player it will be represented by a sphere on server.
// Next: 4
message Player {
    // Player name.
    string name = 1;
    // Material string.
    string material = 2;
    // Physic paramters.
    Physic physic = 3;
    // Local g axis (used for local camera angle).
    Vector3 g_normal = 4;
    // G force (used for local computation).
    double g_force = 5;
}

// UpdateRequest
// Next: 2
message UpdateRequest {
    // Ask for a named object.
    string name = 1;
}

// UpdateResponse
// Next: 5
message UpdateResponse {
    // Player list and position.
    repeated Player players = 1;
    // Elements list and position.
    repeated Element elements = 2;
    // Present time on the server.
    double time = 3;
}

// PushRequest
// Next: 3
message PushRequest {
    // Player name.
    string name = 1;
    // New physic.
    Physic physic = 2;
}

// PushResponse
// Next: 1
message PushResponse {}

// The darwin service.
service DarwinService {
    rpc Update(UpdateRequest) returns (stream UpdateResponse);
    rpc Push(PushRequest) returns (PushResponse);
}
